--- a/hu-centos-8x.adoc
+++ b/hu-centos-8x.adoc
@@ -27,15 +27,18 @@ You can use multipathing with CentOS 8.x to manage ONTAP LUNs.
 
 include::_include/hu/linux-centos-multipathing.adoc[]
 
-== Step 4: Optionally, exclude a device from multipathing
+== Step 4: Confirm the iSCSI configuration for your host
+
+include::_include/hu/linux-iscsi-configuration.adoc[]
+
+== Step 5: Optionally, exclude a device from multipathing
 
 include::_include/hu/exclude-device.adoc[]
 
-== Step 5: Customize multipath parameters for ONTAP LUNs
-
+== Step 6: Customize multipath parameters for ONTAP LUNs
 include::_include/hu/linux-customize-parameters.adoc[]
 
-== Step 6: Review the known issues
+== Step 7: Review the known issues
 
 There are no known issues.
 
