--- a/hu-nvme-index.adoc
+++ b/hu-nvme-index.adoc
@@ -4,7 +4,7 @@ permalink: hu-nvme-index.html
 keywords: nvme, san, host, aix, linux, vsphere, windows
 summary: You can configure certain SAN hosts for the NVMe over Fabrics (NVMe-oF) protocol.
 ---
-= Learn about configuring ONTAP SAN hosts with NVMe-OF
+= Learn about configuring ONTAP SAN hosts with NVMe-oF
 :hardbreaks:
 :toclevels: 1
 :nofooter:
