Add the Jira label

--- a/hu-sles-15spx.adoc
+++ b/hu-sles-15spx.adoc
@@ -74,4 +74,5 @@ include::_include/hu/asm-mirroring.adoc[]
 
 include::_include/hu/kvm-sles.adoc[]
 
+// 2026 JAN 21, ONTAPDOC-3622
 // 2025 Dec 17, ONTAPDOC-3531
