Minor edits post review in staging branch

--- a/nvme-sles-supported-features.adoc
+++ b/nvme-sles-supported-features.adoc
@@ -69,7 +69,7 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 |===
 
 .Related information
-
-link:https://docs.netapp.com/us-en/ontap/san-admin/start-nvme-fc-service-svm-task.html[Learn about managing NVMe protocols^]
+* link:https://docs.netapp.com/us-en/asa-r2/index.html[Learn about ASA r2 systems^]
+* link:https://docs.netapp.com/us-en/ontap/san-admin/start-nvme-fc-service-svm-task.html[Learn about managing NVMe protocols^]
 
 // 2026 Jan 12: ONTAPDOC-3475
