Complete edits post co-pilot review

--- a/nvme-rhel-supported-features.adoc
+++ b/nvme-rhel-supported-features.adoc
@@ -38,7 +38,6 @@ ONTAP supports the following SAN host features regardless of the ONTAP version r
 
 [cols="75,25",options="header"]
 |===
-
 |Feature | RHEL host version
 |Native NVMe multipathing is enabled by default
 a|10.0 or later
@@ -50,7 +49,6 @@ a|9.4 or later
 a|8.2 or later
 |The native udev rule in `nvme-cli` package provides round-robin load balancing for NVMe multipath
 a|8.2 or later 
- 
 |===
 
 NOTE: For details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
@@ -60,7 +58,7 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 [cols="50,50",options="header"]
 |===
 
-|If your RHEL version is .. | Learn about ..
+|If your RHEL version is ... | Learn about ...
 |10 series
 |link:nvme-rhel-10x.html[Configuring NVMe for RHEL 10.x]
 |9 series
