--- a/nvme-rockylinux-supported-features.adoc
+++ b/nvme-rockylinux-supported-features.adoc
@@ -46,7 +46,7 @@ a|10.0 or later
 a|9.4 or later
 |The `nvme-cli` package includes auto-connect scripts removing the need for third-party scripts
 a|8.2 or later
-|The native udev rule in `nvme-cli` package provides round-robin load balancing for NVMe multipath
+|The native udev rule in the `nvme-cli` package provides round-robin load balancing for NVMe multipathing
 a|8.2 or later 
 |===
 
