--- a/_include/hu/linux-iscsi-configuration.adoc
+++ b/_include/hu/linux-iscsi-configuration.adoc
@@ -1,11 +1,17 @@
 To ensure that multipathing is configured correctly for your host, set the `timeout` parameter and confirm that the iSCSI service is running and connecting to the iSCSI targets.
 
 .Steps
-Verify that the iSCSI initiator package (iscsi-initiator-utils) is installed. 
+. Verify that the iSCSI initiator package (iscsi-initiator-utils) is installed: 
 +
 [source,cli]
 ----
-$apt list |grep open-iscsi
+rpm -qa | grep iscsi-initiator-utils
+----
++
+You should see an output similar to the following example:
++
+----
+iscsi-initiator-utils-6.2.1.11-0.git4b3e853.el9.x86_64
 ----
 
 . Set iSCSI Initiator node name:
