--- a/hu-hpe-vme-80x.adoc
+++ b/hu-hpe-vme-80x.adoc
@@ -203,6 +203,6 @@ There are no known issues.
 
 include::_include/hu/use-linux-host-utilities.adoc[]
 
-* Create a host host cluster and configure HPE VME data stores. Refer to the HPE documentation for more information.
+* Configure HPE VME data stores on the ONTAP LUNs, then configure the virtual machine. Refer to the HPE documentation for instruction more information.
 
 // 2026 JAN 13, ONTAPDOC-3595
