--- a/_include/hu/linux-iscsi-configuration-sles.adoc
+++ b/_include/hu/linux-iscsi-configuration-sles.adoc
@@ -7,11 +7,6 @@ To ensure that multipathing is configured correctly for your host, set the `time
 [source,cli]
 ----
 rpm -qa | grep open-iscsi
-----
-+
-You should see an output similar to the following example:
-+
-----
 open-iscsi-2.1.11-160000.2.2.x86_64
 ----
 
@@ -19,7 +14,6 @@ open-iscsi-2.1.11-160000.2.2.x86_64
 +
 [source,cli]
 ----
-Edit /etc/iscsi/initiatorname.iscsi.
 Format: InitiatorName=iqn.YYYY-MM.com.vendor:<host_name>
 Use lowercase, max 223 chars.
 ----
@@ -28,7 +22,6 @@ Use lowercase, max 223 chars.
 +
 [source,cli]
 ----
-Edit /etc/iscsi/iscsid.conf:
 node.session.timeo.replacement_timeout = 5
 ----
 +
@@ -60,7 +53,7 @@ $systemctl status iscsid
 ====
 ----
 ● iscsid.service - Open-iSCSI
-     Loaded: loaded (/usr/lib/systemd/system/iscsid.service; disabled; preset: disabled)
+     Loaded: loaded (/usr/lib/systemd/system/iscsid.service; enabled; preset: enabled)
      Active: active (running) since Tue 2025-12-02 11:36:21 EST; 2 weeks 1 day ago
 TriggeredBy: ● iscsid.socket
        Docs: man:iscsid(8)
