--- a/_include/hu/linux-iscsi-configuration-ubuntu.adoc
+++ b/_include/hu/linux-iscsi-configuration-ubuntu.adoc
@@ -7,11 +7,6 @@ To ensure that multipathing is configured correctly for your host, set the `time
 [source,cli]
 ----
 $apt list |grep open-iscsi
-----
-+
-You should see an output similar to the following example:
-+
-----
 open-iscsi/noble-updates,noble-updates,now 2.1.9-3ubuntu5.4 amd64
 ----
 
@@ -19,7 +14,6 @@ open-iscsi/noble-updates,noble-updates,now 2.1.9-3ubuntu5.4 amd64
 +
 [source,cli]
 ----
-Edit /etc/iscsi/initiatorname.iscsi.
 Format: InitiatorName=iqn.YYYY-MM.com.vendor:<host_name>
 Use lowercase, max 223 chars.
 ----
@@ -28,7 +22,6 @@ Use lowercase, max 223 chars.
 +
 [source,cli]
 ----
-Edit /etc/iscsi/iscsid.conf:
 node.session.timeo.replacement_timeout = 5
 ----
 +
@@ -60,7 +53,7 @@ $systemctl status iscsid
 ====
 ----
 ●iscsid.service - iSCSI initiator daemon (iscsid)
-     Loaded: loaded (/usr/lib/systemd/system/iscsid.service; disabled; preset: enabled)
+     Loaded: loaded (/usr/lib/systemd/system/iscsid.service; enabled; preset: enabled)
      Active: active (running) since Mon 2026-01-12 12:53:18 IST; 2 days ago
 TriggeredBy: ● iscsid.socket
        Docs: man:iscsid(8)
