--- a/_include/hu/linux-iscsi-configuration-sles.adoc
+++ b/_include/hu/linux-iscsi-configuration-sles.adoc
@@ -53,7 +53,7 @@ $systemctl status iscsid
 ====
 ----
 ● iscsid.service - Open-iSCSI
-     Loaded: loaded (/usr/lib/systemd/system/iscsid.service; enabled; preset: enabled)
+     Loaded: loaded (/usr/lib/systemd/system/iscsid.service; enabled; preset: disabled)
      Active: active (running) since Tue 2025-12-02 11:36:21 EST; 2 weeks 1 day ago
 TriggeredBy: ● iscsid.socket
        Docs: man:iscsid(8)
