--- a/_include/hu/linux-iscsi-configuration-ubuntu.adoc
+++ b/_include/hu/linux-iscsi-configuration-ubuntu.adoc
@@ -7,18 +7,22 @@ To ensure that multipathing is configured correctly for your host, set the `time
 [source,cli]
 ----
 $apt list |grep open-iscsi
+----
++
+You  should see an output similar to the following example:
++
+----
 open-iscsi/noble-updates,noble-updates,now 2.1.9-3ubuntu5.4 amd64
 ----
 
-. Set iSCSI Initiator node name:
+. Verify the iSCSI initiator node name located in the `/etc/iscsi/initiatorname.iscsi` file:
 +
 [source,cli]
 ----
-Format: InitiatorName=iqn.YYYY-MM.com.vendor:<host_name>
-Use lowercase, max 223 chars.
+InitiatorName=iqn.YYYY-MM.com.<vendor>:<host_name>
 ----
 
-. Configure the iSCSI session timeout parameter:
+. Configure the iSCSI session timeout parameter located in the `/etc/iscsi/iscsid.conf` file:
 +
 [source,cli]
 ----
