--- a/hu-centos-8x.adoc
+++ b/hu-centos-8x.adoc
@@ -50,5 +50,6 @@ include::_include/hu/asm-mirroring.adoc[]
 
 include::_include/hu/kvm-centos.adoc[]
 
+// 2026 JAN 28, ONTAPDOC-3486
 // 2025 Dec 17, ONTAPDOC-3531
 // 2025 JUN 30, ONTAPDOC-3068
