--- a/hu-ol-8x.adoc
+++ b/hu-ol-8x.adoc
@@ -51,4 +51,5 @@ include::_include/hu/asm-mirroring.adoc[]
 
 include::_include/hu/kvm.adoc[]
 
+// 2026 JAN 28, ONTAPDOC-3486
 // 2025 Dec 17, ONTAPDOC-3531
