--- a/hu-rhel-10x.adoc
+++ b/hu-rhel-10x.adoc
@@ -153,6 +153,7 @@ include::_include/hu/asm-mirroring.adoc[]
 
 include::_include/hu/kvm-redhat.adoc[]
 
+// 2026 JAN 28, ONTAPDOC-3486
 // 2025 Dec 17, ONTAPDOC-3531
 //ONTAPDOC-2987 8-May-2025
 //ONTAPDOC-2561 25-Nov-2024
