--- a/hu-rhel-8x.adoc
+++ b/hu-rhel-8x.adoc
@@ -82,4 +82,5 @@ include::_include/hu/asm-mirroring.adoc[]
 
 include::_include/hu/kvm-redhat.adoc[]
 
+// 2026 JAN 28, ONTAPDOC-3486
 // 2025 Dec 17, ONTAPDOC-3531
