--- a/hu-rockylinux-10x.adoc
+++ b/hu-rockylinux-10x.adoc
@@ -46,14 +46,6 @@ systemctl enable multipathd
 systemctl start multipathd
 ----
 
-. The iSCSI `replacement_timeout` parameter controls how long the iSCSI layer should wait for a timed-out path or session to reestablish itself before failing any commands on it. NetApp recommends setting the value of `replacement_timeout` to 5 in the iSCSI configuration file:
-+
-[source,cli]
-----
-# grep replacement_timeout /etc/iscsi/iscsid.conf
-node.session.timeo.replacement_timeout = 5
-----
-
 . Each time you boot the host, the empty `/etc/multipath.conf` zero-byte file automatically loads the NetApp recommended host multipath parameters as the default settings. You shouldn't need to make changes to the `/etc/multipath.conf` file for your host because the operating system is compiled with the multipath parameters that recognize and manage ONTAP LUNs correctly.
 +
 The following table shows the Linux OS native compiled multipath parameter settings for ONTAP LUNs.
@@ -161,6 +153,7 @@ include::_include/hu/asm-mirroring.adoc[]
 
 include::_include/hu/kvm-rockylinux.adoc[]
 
+// 2026 JAN 28, ONTAPDOC-3486
 // 2025 Dec 17, ONTAPDOC-3531
 // 2025 JUN 25, ONTAPDOC-3090
 // ONTAPDOC-2987 8-May-2025
