--- a/hu-sles-15spx.adoc
+++ b/hu-sles-15spx.adoc
@@ -81,5 +81,6 @@ include::_include/hu/asm-mirroring.adoc[]
 
 include::_include/hu/kvm-sles.adoc[]
 
+// 2026 JAN 28, ONTAPDOC-3486
 // 2026 JAN 21, ONTAPDOC-3622
 // 2025 Dec 17, ONTAPDOC-3531
