--- a/hu_ubuntu_2404.adoc
+++ b/hu_ubuntu_2404.adoc
@@ -48,6 +48,7 @@ include::_include/hu/asm-mirroring.adoc[]
 
 include::_include/hu/kvm-ubuntu.adoc[]
 
+// 2026 JAN 28, ONTAPDOC-3486
 // 2025 Dec 17, ONTAPDOC-3531
 // 2025 JULY 15, ONTAPDOC-3128
 // 2024 AUG 13, ONTAPDOC-2294
