--- a/_include/hu/linux-iscsi-configuration.adoc
+++ b/_include/hu/linux-iscsi-configuration.adoc
@@ -8,13 +8,13 @@ To ensure that multipathing is configured correctly for your host, set the `time
 rpm -qa | grep iscsi-initiator-utils
 ----
 +
-You  should see an output similar to the following example:
+You should see an output similar to the following example:
 +
 ----
 iscsi-initiator-utils-6.2.1.11-0.git4b3e853.el9.x86_64
 ----
 
-. Verify the iSCSI initiator node name located in the `/etc/iscsi/initiatorname.iscsi` file:
+. Verify the iSCSI initiator node name, which is located in the `/etc/iscsi/initiatorname.iscsi` file:
 +
 [source,cli]
 ----
