--- a/nvme-proxmox-ve-8x.adoc
+++ b/nvme-proxmox-ve-8x.adoc
@@ -142,7 +142,7 @@ LPe35002-M2
 cat /sys/class/scsi_host/host*/modeldesc
 ----
 +
-You should see output similar to the following example:
+You should see an output similar to the following example:
 +
 ----
 Emulex LPe35002-M2 2-Port 32Gb Fibre Channel Adapter
@@ -195,7 +195,7 @@ cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 cat /sys/class/fc_host/host*/port_name
 ----
 +
-You should see output similar to:
+You should an see output similar to:
 +
 ----
 0x100000109b95467e
