--- a/nvme-rhel-10x.adoc
+++ b/nvme-rhel-10x.adoc
@@ -144,7 +144,7 @@ SN1700E2P
 cat /sys/class/scsi_host/host*/modeldesc
 ----
 +
-You should see output similar to the following example:
+You should an see output similar to the following example:
 +
 ----
 HPE SN1700E 64Gb 2p FC HBA 
@@ -197,7 +197,7 @@ cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 cat /sys/class/fc_host/host*/port_name
 ----
 +
-You should see output similar to:
+You should an see output similar to:
 +
 ----
 0x10005cba2cfca7de
@@ -927,7 +927,7 @@ DHHC-1:01:2G7lsg9PMO00h1Wf1g4QtP0XT11kREz0qVuLm2xvZdbaWR/g:
 cat /sys/class/nvme-subsystem/nvme- subsys4/nvme4/dhchap_ctrl_secret
 ----
 +
-You should see output similar to the following example:
+You should see an output similar to the following example:
 +
 ----
 DHHC-1:03:5CgWULVnU5HUOwP1MNg95pkiUAwayiO+IvrALZR8HpeJIHw3xyHdGlTnvEJ81HDjBb+fGteUgIn0fj8ASHZIgkuFIx8=:
