--- a/nvme-rockylinux-10x.adoc
+++ b/nvme-rockylinux-10x.adoc
@@ -148,7 +148,7 @@ LPe36002-M64
 cat /sys/class/scsi_host/host*/modeldesc
 ----
 +
-You should an see output similar to the following example:
+You should see an output similar to the following example:
 +
 ----
 Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter 
@@ -201,7 +201,7 @@ cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 cat /sys/class/fc_host/host*/port_name
 ----
 +
-You should an see output similar to:
+You should see an output similar to:
 +
 ----
 0x2100f4c7aa0cd7c2
