--- a/nvme-rockylinux-9x.adoc
+++ b/nvme-rockylinux-9x.adoc
@@ -83,7 +83,7 @@ LPe36002-M64
 cat /sys/class/scsi_host/host*/modeldesc
 ----
 +
-You should an see output similar to the following example:
+You should see an output similar to the following example:
 +
 ----
 Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter 
