--- a/hu-hpe-vme-80x.adoc
+++ b/hu-hpe-vme-80x.adoc
@@ -135,7 +135,11 @@ The following example displays the output for an ONTAP LUN with two Active/Optim
 --
 =====
 
-== Step 3: Optionally, exclude a device from multipathing
+== Step 3: Confirm the iSCSI configuration for your host
+
+include::_include/hu/linux-iscsi-configuration-ubuntu.adoc[]
+
+== Step 4: Optionally, exclude a device from multipathing
 
 If required, you can exclude a device from multipathing by adding the WWID for the unwanted device to the "blacklist" stanza for the `multipath.conf` file.
 
@@ -164,7 +168,7 @@ blacklist {
 }
 ----
 
-== Step 4: Customize multipath parameters for ONTAP LUNs
+== Step 5: Customize multipath parameters for ONTAP LUNs
 
 If your host is connected to LUNs from other vendors and any of the multipath parameter settings are overridden, you need to correct them by adding stanzas later in the `multipath.conf` file that apply specifically to ONTAP LUNs. If you don't do this, the ONTAP LUNs might not work as expected. 
 
@@ -195,7 +199,7 @@ devices {
 ----
 ====
 
-== Step 5: Review the known issues
+== Step 6: Review the known issues
 
 There are no known issues.
 
